update Scripts section of OpenAPI documentation (#2)

--- a/src/paths/_index.yaml
+++ b/src/paths/_index.yaml
@@ -2,13 +2,66 @@
 '/scripts':
   get:
     $ref: "./scripts/fetchAll.yaml"
+  post:
+    $ref: "./scripts/create.yaml"
+  put:
+    $ref: "./scripts/update.yaml"
+
 '/scripts/{name}':
   get:
     $ref: "./scripts/fetchByName.yaml"
 '/scripts/{name}/{version}':
   get:
     $ref: "./scripts/fetchByNameAndVersion.yaml"
+  put:
+    $ref: "./scripts/updateByNameAndVersion.yaml"
+  delete:
+    $ref: "./scripts/deleteByNameAndVersion.yaml"
 
+# Components
+'/components':
+  get:
+    $ref: "./components/fetchAll.yaml"
+  post:
+    $ref: "./components/create.yaml"
+  put:
+    $ref: "./components/updateAll.yaml"
+  delete:
+    $ref: "./components/deleteAll.yaml"
+'/components/{name}':
+  get:
+    $ref: "./components/fetchByName.yaml"
+  delete:
+    $ref: "./components/deleteByName.yaml"
+'/components/{name}/{version}':
+  get:
+    $ref: "./components/fetchByNameAndVersion.yaml"
+  put:
+    $ref: "./components/updateByNameAndVersion.yaml"
+  delete:
+    $ref: "./components/deleteByNameAndVersion.yaml"
+
+'/connections':
+  get:
+    $ref: "./connections/fetchAll.yaml"
+  post:
+    $ref: "./connections/create.yaml"
+  put:
+    $ref: "./connections/updateAll.yaml"
+  delete:
+    $ref: "./connections/deleteAll.yaml"
+'/connections/{name}':
+  get:
+    $ref: "./connections/fetchByName.yaml"
+  delete:
+    $ref: "./connections/deleteByName.yaml"
+'/connections/{name}/{environment}':
+  get:
+    $ref: "./connections/fetchByNameAndEnvironment.yaml"
+  put:
+    $ref: './connections/updateByNameAndEnvironment.yaml'
+  delete:
+    $ref: "./connections/deleteByNameAndEnvironment.yaml"
 # Datasets
 '/datasets':
   get:
