--- a/src/schemas/scriptExecutions/ActionExecutionDto.yaml
+++ b/src/schemas/scriptExecutions/ActionExecutionDto.yaml
@@ -22,8 +22,10 @@ properties:
     enum: ["RUNNING", "SUCCESS", "WARNING", "ERROR", "STOPPED", "SKIPPED"]
   startTimestamp:
     type: string
+    format: date-time
   endTimestamp:
     type: string
+    format: date-time
   inputParameters:
     type: array
     items:
