--- a/src/schemas/executionRequests/ExecutionRequestDto.yaml
+++ b/src/schemas/executionRequests/ExecutionRequestDto.yaml
@@ -2,6 +2,9 @@ type: object
 properties:
   executionRequestId:
     type: string
+  requestTimestamp:
+    type: string
+    format: date-time
   name:
     type: string
   description:
