--- a/src/schemas/_index.yaml
+++ b/src/schemas/_index.yaml
@@ -34,6 +34,50 @@ ConnectionParameterDto:
 EmbeddedConnectionDto:
   $ref: "./connections/EmbeddedConnectionDto.yaml"
 
+# Environments
+EnvironmentDto:
+  $ref: "./environments/EnvironmentDto.yaml"
+EnvironmentParameterDto:
+  $ref: "./environments/EnvironmentParameterDto.yaml"
+EmbeddedEnvironmentDto:
+  $ref: "./environments/EmbeddedEnvironmentDto.yaml"
+
+# Execution Requests
+ExecutionRequestDto:
+  $ref: "./executionRequests/ExecutionRequestDto.yaml"
+ExecutionRequestPostDto:
+  $ref: "./executionRequests/ExecutionRequestPostDto.yaml"
+ExecutionRequestLabelDto:
+  $ref: "./executionRequests/ExecutionRequestLabelDto.yaml"
+PagedExecutionRequestDto:
+  $ref: "./executionRequests/PagedExecutionRequestDto.yaml"
+ScriptExecutionRequestDto:
+  $ref: "./executionRequests/ScriptExecutionRequestDto.yaml"
+ScriptexecutionRequestPostDto:
+  $ref: "./executionRequests/ScriptExecutionRequestPostDto.yaml"
+ScriptExecutionRequestImpersonationDto:
+  $ref: "./executionRequests/ScriptExecutionRequestImpersonationDto.yaml"
+ScriptExecutionRequestParameterDto:
+  $ref: "./executionRequests/ScriptExecutionRequestParameterDto.yaml"
+
+
+# Script executions
+ScriptExecutionDto:
+  $ref: "./scriptExecutions/ScriptExecutionDto.yaml"
+EmbeddedScriptExecutionDto:
+  $ref: "./scriptExecutions/EmbeddedScriptExecutionDto.yaml"
+ExecutionInputParameterDto:
+  $ref: "./scriptExecutions/ExecutionInputParameterDto.yaml"
+ActionExecutionDto:
+  $ref: "./scriptExecutions/ActionExecutionDto.yaml"
+ActionInputParametersDto:
+  $ref: "./scriptExecutions/ActionInputParametersDto.yaml"
+OutputDto:
+  $ref: "./scriptExecutions/OutputDto.yaml"
+## ScriptLabelDto already exists in Script Schema
+## ExecutionRequestLabelDto already exists in Execution Requests schema
+
+
 # Pagination
 Link:
   $ref: "./pagination/Link.yaml"
