add bearer token security

--- a/src/paths/components/create.yaml
+++ b/src/paths/components/create.yaml
@@ -2,6 +2,8 @@ summary: Create a new component
 tags:
   - components
 operationId: componentsCreate
+security:
+  - bearerAuth: ["COMPONENTS_WRITE"]
 requestBody:
   description: The new Component to be created
   required: true
