--- a/src/paths/scripts/fetchByName.yaml
+++ b/src/paths/scripts/fetchByName.yaml
@@ -2,9 +2,10 @@ summary: All versions of a script with a specified name
 tags:
   - scripts
 operationId: scriptsFetchByName
+security:
+  - bearerAuth: ["SCRIPT_READ"]
 parameters:
   - $ref: "../../parameters/path/scripts/Name.yaml"
-
 responses:
   '200':
     description: Expected response to a valid request
