--- a/src/paths/components/deleteByName.yaml
+++ b/src/paths/components/deleteByName.yaml
@@ -2,6 +2,8 @@ summary: Delete a specific component with all versions
 tags:
   - components
 operationId: componentsDeleteByName
+security:
+  - bearerAuth: ["COMPONENTS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/components/Name.yaml"
 responses:
