--- a/src/paths/components/deleteByNameAndVersion.yaml
+++ b/src/paths/components/deleteByNameAndVersion.yaml
@@ -2,6 +2,8 @@ summary: Delete a specific version of a component
 tags:
   - components
 operationId: componentsDeleteByName
+security:
+  - bearerAuth: ["COMPONENTS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/components/Name.yaml"
   - $ref: "../../parameters/path/components/Version.yaml"
