--- a/src/paths/connections/deleteAll.yaml
+++ b/src/paths/connections/deleteAll.yaml
@@ -2,6 +2,8 @@ summary: Delete all connections
 tags:
   - connections
 operationId: connectionsDeleteAll
+security:
+  - bearerAuth: ["CONNECTIONS_WRITE"]
 responses:
   '200':
     description: Expected response to a valid request
