--- a/src/paths/datasets/create.yaml
+++ b/src/paths/datasets/create.yaml
@@ -2,6 +2,8 @@ summary: Create a dataset
 tags:
   - datasets
 operationId: datasetsCreate
+security:
+  - bearerAuth: ["DATASETS_WRITE"]
 requestBody:
   content:
     application/json:
