--- a/src/paths/datasets/deleteByUuid.yaml
+++ b/src/paths/datasets/deleteByUuid.yaml
@@ -2,6 +2,8 @@ summary: delete dataset with specified uuid
 tags:
   - datasets
 operationId: datasetsDeleteById
+security:
+  - bearerAuth: ["DATASETS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/datasets/Uuid.yaml"
 
