--- a/src/paths/environments/deleteByName.yaml
+++ b/src/paths/environments/deleteByName.yaml
@@ -2,6 +2,8 @@ summary: Delete a specific environment
 tags:
   - environments
 operationId: environmentsDeleteByName
+security:
+  - bearerAuth: ["ENVIRONMENTS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/environments/Name.yaml"
 responses:
