--- a/src/paths/executionRequests/fetchAll.yaml
+++ b/src/paths/executionRequests/fetchAll.yaml
@@ -2,6 +2,8 @@ summary: Fetch all execution requests
 tags:
   - execution requests
 operationId: executionRequestsFetchAll
+security:
+  - bearerAuth: ["EXECUTION_REQUESTS_READ"]
 parameters:
   - $ref: "../../parameters/query/executionRequests/Script.yaml"
   - $ref: "../../parameters/query/executionRequests/Version.yaml"
