--- a/src/paths/scripts/fetchByNameAndVersion.yaml
+++ b/src/paths/scripts/fetchByNameAndVersion.yaml
@@ -2,10 +2,11 @@ summary: Info of a specific script
 tags:
   - scripts
 operationId: scriptsFetchByNameAndVersion
+security:
+  - bearerAuth: ["SCRIPT_READ"]
 parameters:
   - $ref: "../../parameters/path/scripts/Name.yaml"
   - $ref: "../../parameters/path/scripts/Version.yaml"
-
 responses:
   '200':
     description: Expected response to a valid request
