--- a/src/paths/security_groups/deleteTeam.yaml
+++ b/src/paths/security_groups/deleteTeam.yaml
@@ -2,6 +2,8 @@ summary: delete a team from a security group
 tags:
   - security_groups
 operationId: securityGroupsAddTeam
+security:
+  - bearerAuth: ["GROUPS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/security_groups/Uuid.yaml"
   - $ref: "../../parameters/path/security_groups/TeamUuid.yaml"
