--- a/src/paths/security_groups/updateByUuid.yaml
+++ b/src/paths/security_groups/updateByUuid.yaml
@@ -2,6 +2,8 @@ summary: update a security group
 tags:
   - security_groups
 operationId: securityGRoupsUpdateByUuid
+security:
+  - bearerAuth: ["GROUPS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/security_groups/Uuid.yaml"
 requestBody:
