--- a/src/paths/teams/createRole.yaml
+++ b/src/paths/teams/createRole.yaml
@@ -2,6 +2,8 @@ summary: Create a role for team
 tags:
   - teams
 operationId: teamsCreateRole
+security:
+  - bearerAuth: ["TEAMS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/teams/Uuid.yaml"
 requestBody:
