--- a/src/paths/teams/deleteRole.yaml
+++ b/src/paths/teams/deleteRole.yaml
@@ -2,6 +2,8 @@ summary: delete a team's role
 tags:
   - teams
 operationId: teamsDeleteRole
+security:
+  - bearerAuth: ["TEAMS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/teams/Uuid.yaml"
   - $ref: "../../parameters/path/teams/RoleUuid.yaml"
