--- a/src/paths/components/deleteByNameAndVersion.yaml
+++ b/src/paths/components/deleteByNameAndVersion.yaml
@@ -10,7 +10,9 @@ parameters:
 responses:
   '200':
     description: Expected response to a valid request
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
   '404':
     description: Expected response to a un-existing version of a component
