--- a/src/paths/components/updateAll.yaml
+++ b/src/paths/components/updateAll.yaml
@@ -20,7 +20,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/components/EmbeddedComponentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
   '404':
     description: Expected response to one or many non-existing components
