--- a/src/paths/connections/deleteAll.yaml
+++ b/src/paths/connections/deleteAll.yaml
@@ -7,7 +7,9 @@ security:
 responses:
   '200':
     description: Expected response to a valid request
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/connections/ResponseConnectionForbidden.yaml"
 
 
