--- a/src/paths/environments/fetchAll.yaml
+++ b/src/paths/environments/fetchAll.yaml
@@ -11,7 +11,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/environments/EmbeddedEnvironmentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/environments/ResponseEnvironmentForbidden.yaml"
 
 
