--- a/src/paths/environments/updateAll.yaml
+++ b/src/paths/environments/updateAll.yaml
@@ -20,7 +20,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/environments/EmbeddedEnvironmentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/environments/ResponseEnvironmentForbidden.yaml"
   '404':
     description: Expected response to one or many un-existing environments
