--- a/src/paths/scripts/updateAll.yaml
+++ b/src/paths/scripts/updateAll.yaml
@@ -20,5 +20,7 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/scripts/ScriptDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
