--- a/src/paths/components/create.yaml
+++ b/src/paths/components/create.yaml
@@ -12,15 +12,17 @@ requestBody:
       schema:
         $ref: "../../schemas/components/ComponentDto.yaml"
 responses:
-  '200':
+  "200":
     description: Expected response to a valid request
     content:
       application/json:
         schema:
           $ref: "../../schemas/components/ComponentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
-  '404':
+  "404":
     description: Expected response to a non-existing component
     content:
       application/json:
@@ -32,5 +34,3 @@ responses:
           error: "Not Found"
           message: "Component HttpExecuteRequest already exists"
           path: "/api/components/"
-
-
