--- a/src/paths/components/fetchAll.yaml
+++ b/src/paths/components/fetchAll.yaml
@@ -11,7 +11,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/components/EmbeddedComponentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
 
 
