--- a/src/paths/components/fetchByNameAndVersion.yaml
+++ b/src/paths/components/fetchByNameAndVersion.yaml
@@ -14,7 +14,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/components/ComponentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
 
 
