--- a/src/paths/components/updateByNameAndVersion.yaml
+++ b/src/paths/components/updateByNameAndVersion.yaml
@@ -33,7 +33,9 @@ responses:
           error: "Bad Request"
           message: "Mismatch between url query 'HttpExecuteRequestss' and request body "
           path: "/api/components/HttpExecuteRequestss/1"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
   '404':
     description: Expected response to a un-existing component
