--- a/src/paths/connections/create.yaml
+++ b/src/paths/connections/create.yaml
@@ -18,7 +18,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/connections/ConnectionDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/connections/ResponseConnectionForbidden.yaml"
   '404':
     description: Expected response to an existing connnection
