--- a/src/paths/connections/fetchAll.yaml
+++ b/src/paths/connections/fetchAll.yaml
@@ -11,7 +11,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/connections/EmbeddedConnectionDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/connections/ResponseConnectionForbidden.yaml"
 
 
