--- a/src/paths/environments/deleteByName.yaml
+++ b/src/paths/environments/deleteByName.yaml
@@ -9,7 +9,9 @@ parameters:
 responses:
   '200':
     description: Expected response to a valid request
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/environments/ResponseEnvironmentForbidden.yaml"
   '404':
     description: Expected response to a un-existing environment
