--- a/src/paths/environments/updateByName.yaml
+++ b/src/paths/environments/updateByName.yaml
@@ -33,8 +33,9 @@ responses:
           error: Bad Request
           message: Mismatch between url query 'TUTO' and request body
           path: /api/environments/TUTO
-
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/environments/ResponseEnvironmentForbidden.yaml"
   '404':
     description: Expected response to a non-existing environment
