--- a/src/paths/scripts/fetchByName.yaml
+++ b/src/paths/scripts/fetchByName.yaml
@@ -13,5 +13,7 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/scripts/PagedScriptDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
