--- a/src/paths/scripts/updateByNameAndVersion.yaml
+++ b/src/paths/scripts/updateByNameAndVersion.yaml
@@ -33,8 +33,8 @@ responses:
           error: Bad Request
           message: Mismatch between url query '989' and request body
           path: /api/scripts/fho.folderExists.2/989
-
-        
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
 
