--- a/src/schemas/executionRequests/ScriptExecutionRequestDto.yaml
+++ b/src/schemas/executionRequests/ScriptExecutionRequestDto.yaml
@@ -17,7 +17,8 @@ properties:
     items:
       $ref: "./ScriptExecutionRequestParameterDto.yaml"
   scriptExecutionRequestStatus:
-    type: [NEW,SUBMITTED,ACCEPTED,DECLINED,COMPLETED,ABORTED]
+    type: string
+    enum: [NEW,SUBMITTED,ACCEPTED,DECLINED,COMPLETED,ABORTED]
   scriptName:
     type: string
   scriptVersion:
@@ -28,5 +29,6 @@ properties:
   runId:
     type: string
   runStatus:
-    type: [RUNNING, SUCCESS, WARNING, ERROR, STOPPED, SKIPPED]
+    type: string
+    enum: [RUNNING, SUCCESS, WARNING, ERROR, STOPPED, SKIPPED]
 
